# tauri-tutorial

./: .gitignore  .prettierrc  README.md  UPDATE_LOG.md  index.html  install.json  package.json  rsw.toml  tsconfig.json  tsconfig.node.json  unocss.ts  vite.config.ts
.github/workflows/: release.yml
@omb/game-of-life/: Cargo.toml
@omb/game-of-life/src/: lib.rs
canvas/: 1.js  index.html
locales/: config.ts
locales/common/: en.json  index.ts  zh_CN.json  zh_HK.json
locales/dashboard/: en.json  index.ts  zh_CN.json  zh_HK.json
locales/game/: en.json  index.ts  zh_CN.json  zh_HK.json
locales/rules/: en.json  index.ts  zh_CN.json  zh_HK.json
locales/tip/: en.json  index.ts  zh_CN.json  zh_HK.json
locales/tools/: en.json  index.ts  zh_CN.json  zh_HK.json
plugins/: fsExtra.ts
scripts/: release.mjs  updatelog.mjs  updater.mjs  updater.ts
src/: App.tsx  index.css  main.tsx  routes.tsx  shims.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  menu.rs
src-tauri/src/omb/: fs.rs  menu.rs  mod.rs  setup.rs  tray.rs
src/components/Editor/: index.scss  index.tsx
src/components/GoBack/: index.scss  index.tsx
src/components/InputText/: index.scss  index.tsx
src/hooks/: useEvent.ts  useFullCanvas.ts  useI18n.ts  useLang.ts  useLocalColor.ts
src/layouts/: FullSreen.tsx  fullscreen.scss  index.scss  index.tsx
src/styles/: common.scss  index.scss  main.scss  variable.scss
src/system/: fs.ts  os.tsx
src/utils/: color.ts  constant.ts  mdParser.ts  tools.ts
updater/: app.json
(+35 files in other folders)
