[package]
name = "game-of-life"
version = "0.1.0"
authors = ["lencx <cxin1314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.71"
fixedbitset = "0.4.0"
js-sys = "0.3.48"
